# PineappleCAS

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  ast.c  ast.h  error.c  error.h  main.c  makefile  num.c  parser.c  parser.h  pc.makefile  pcmain.c  tests.txt
cas/: cas.h
src/: .travis.yml  ast.c  ast.h  dbg.c  dbg.h  debug.c  debug.h  error.c  error.h  export.c  export.h  num.c  num.h  parser.c  parser.h  pineapple_debug.c  pineapple_debug.h  stack.c  stack.h
src/calc/: gui.c  gui.h  interface.c  interface.h  main.c
src/calculator/: ftoa.c  main.c
src/cas/: cas.h  derivative.c  derivative.h  eval.c  expand.c  factor.c  identities.c  identities.h  mapping.c  mapping.h  simplify.c  simplify.h
src/imath/: imath.c  imath.h  imrat.c
src/pc/: main.c  tests.c  tests.h  yvar.c  yvar.h
tests/: 5div2.8xy  5x^2.8xy  all.8xy  doubleunaryoperators.8xy  garbage.8xy  logbase.8xy  nonsense.8xy  reciprocal.8xy  test.8xy  testfile
